--- a/eqdkp_bf_v.css
+++ b/eqdkp_bf_v.css
@@ -110,6 +110,7 @@ body {
 	background-image: url('TEMPLATE_BACKGROUND');
 	background-repeat: no-repeat;
 	background-position: center top;
+	background-size: cover;
 }
 
 body.simple-header {
